@@ -1,14 +1,21 @@
 #define SP_EMBEDDABLE_DOCUMENT_C
 
+#include <config.h>
+#include "../sp-object.h"
+#include "../sodipodi.h"
 #include "../document.h"
 #include "sodipodi-bonobo.h"
 #include "embeddable-desktop.h"
+#include "embeddable-drawing.h"
 #include "embeddable-document.h"
 
 static void sp_embeddable_document_class_init (GtkObjectClass * klass);
 static void sp_embeddable_document_init (GtkObject * object);
 
 static void sp_embeddable_document_destroyed (SPEmbeddableDocument * document);
+
+int sp_embeddable_document_pf_load (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure);
+static int sp_embeddable_document_pf_save (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure);
 
 GtkType
 sp_embeddable_document_get_type (void)
@@ -48,6 +55,10 @@ sp_embeddable_document_factory (BonoboEmbeddableFactory * this, gpointer data)
 {
 	SPEmbeddableDocument * document;
 	Bonobo_Embeddable corba_document;
+	BonoboPersistFile * pfile;
+#if 0
+	BonoboPersistStream * pstream;
+#endif
 
 	document = gtk_type_new (SP_EMBEDDABLE_DOCUMENT_TYPE);
 
@@ -63,9 +74,25 @@ sp_embeddable_document_factory (BonoboEmbeddableFactory * this, gpointer data)
 	bonobo_embeddable_construct_full (BONOBO_EMBEDDABLE (document),
 		corba_document,
 		sp_embeddable_desktop_factory, NULL,
-		NULL /* Item factory */, NULL);
+		sp_embeddable_drawing_factory, NULL);
 
+	/* Add interfaces */
+
+	pfile = bonobo_persist_file_new (sp_embeddable_document_pf_load,
+		sp_embeddable_document_pf_save, document);
+
+	if (pfile == NULL) {
+		gtk_object_unref (GTK_OBJECT (document));
+		return CORBA_OBJECT_NIL;
+	}
+
+	bonobo_object_add_interface (BONOBO_OBJECT (document), BONOBO_OBJECT (pfile));
+
+#if 0
 	sp_bonobo_objects++;
+#else
+	gnome_mdi_register (SODIPODI, GTK_OBJECT (document));
+#endif
 
 	gtk_signal_connect (GTK_OBJECT (document), "destroy",
 		GTK_SIGNAL_FUNC (sp_embeddable_document_destroyed), NULL);
@@ -76,9 +103,52 @@ sp_embeddable_document_factory (BonoboEmbeddableFactory * this, gpointer data)
 static void
 sp_embeddable_document_destroyed (SPEmbeddableDocument * document)
 {
+#if 0
 	if (--sp_bonobo_objects > 0) return;
 
 	/* Should we destroy factory */
 
 	gtk_main_quit ();
+#else
+	gnome_mdi_unregister (SODIPODI, GTK_OBJECT (document));
+#endif
 }
+
+int
+sp_embeddable_document_pf_load (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure)
+{
+	SPEmbeddableDocument * document;
+	SPDocument * newdocument;
+
+	document = SP_EMBEDDABLE_DOCUMENT (closure);
+
+	newdocument = sp_document_new (filename);
+
+	if (newdocument == NULL) return -1;
+
+	gtk_object_unref (GTK_OBJECT (document->document));
+	document->document = newdocument;
+
+	bonobo_embeddable_foreach_view (BONOBO_EMBEDDABLE (document),
+		sp_embeddable_desktop_new_doc, NULL);
+
+	bonobo_embeddable_foreach_item (BONOBO_EMBEDDABLE (document),
+		sp_embeddable_drawing_new_doc, NULL);
+
+	return 0;
+}
+
+static int
+sp_embeddable_document_pf_save (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure)
+{
+	SPEmbeddableDocument * document;
+
+	document = SP_EMBEDDABLE_DOCUMENT (closure);
+
+	/* fixme */
+
+	sp_repr_save_file (SP_OBJECT (document->document->root)->repr, filename);
+
+	return 0;
+}
+
